--- a/package.json
+++ b/package.json
@@ -20,15 +20,13 @@
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "prettier": "^3.2.4",
+    "prettier-plugin-svelte": "^3.1.2"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/pouchdb": "^6.4.2",
     "daisyui": "^4.6.0",
-    "dexie": "^3.2.4",
-    "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.1.2",
     "svelte-navigator": "^3.2.2"
   }
 }
