--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.12",
-    "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.1.2"
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.6.0",
+    "dayjs": "^1.11.10",
+    "decimal.js": "^10.4.3",
     "svelte-navigator": "^3.2.2"
   }
 }
