--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
     "lucide-svelte": "^0.317.0",
-    "svelte-navigator": "^3.2.2"
+    "svelte-navigator": "^3.2.2",
+    "zod": "^3.22.4"
   }
 }
