--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "@clerk/types": "^3.62.0"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^4.70.0",
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
