--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier . --write"
   },
   "devDependencies": {
+    "@clerk/types": "^3.62.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
@@ -22,8 +23,7 @@
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.12",
-    "@clerk/types": "^3.62.0"
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.70.0",
