--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier . --write"
   },
   "devDependencies": {
+    "@clerk/types": "^3.62.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
@@ -25,6 +26,7 @@
     "vite": "^5.0.12"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^4.70.0",
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
