--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
+    "localforage": "^1.10.0",
     "lucide-svelte": "^0.317.0",
+    "nanoid": "^5.0.6",
     "svelte-navigator": "^3.2.2",
     "zod": "^3.22.4"
   }
