started working on the API side

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
+    "drizzle-kit": "^0.20.14",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.1.2",
@@ -27,10 +28,12 @@
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.70.0",
+    "@libsql/client": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
+    "drizzle-orm": "^0.30.5",
     "localforage": "^1.10.0",
     "lucide-svelte": "^0.317.0",
     "nanoid": "^5.0.6",
