added trpc fetch adapter

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "decimal.js": "^10.4.3",
     "drizzle-orm": "^0.30.5",
     "drizzle-zod": "^0.5.1",
+    "fetch": "link:@trpc/server/adapters/fetch",
     "localforage": "^1.10.0",
     "lucide-svelte": "^0.317.0",
     "nanoid": "^5.0.6",
