--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@clerk/clerk-js": "^4.70.0",
     "@libsql/client": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
-    "@trpc/client": "11.0.0-next.327",
+    "@trpc/client": "11.0.0-rc.329",
     "@trpc/server": "11.0.0-next.327",
+    "@types/jsonwebtoken": "^9.0.6",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
@@ -43,6 +44,7 @@
     "localforage": "^1.10.0",
     "lucide-svelte": "^0.317.0",
     "nanoid": "^5.0.6",
+    "standalone": "link:@trpc/server/adapters/standalone",
     "svelte-navigator": "^3.2.2",
     "zod": "^3.22.4"
   }
