--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "prettier": "prettier . --write",
-    "generate-migrations": "drizzle-kit generate:sqlite"
+    "generate-migrations": "drizzle-kit generate:sqlite",
+    "start:server": "tsx server/dev.ts",
+    "playground": "tsx playground/index.ts"
   },
   "devDependencies": {
     "@clerk/types": "^3.62.0",
@@ -24,6 +26,7 @@
     "svelte-check": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.12"
   },
@@ -37,6 +40,7 @@
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.5",
     "drizzle-zod": "^0.5.1",
     "fetch": "link:@trpc/server/adapters/fetch",
@@ -45,6 +49,7 @@
     "lucide-svelte": "^0.317.0",
     "nanoid": "^5.0.6",
     "standalone": "link:@trpc/server/adapters/standalone",
+    "superjson": "^2.2.1",
     "svelte-navigator": "^3.2.2",
     "zod": "^3.22.4"
   }
