--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "@trpc/client": "11.0.0-rc.329",
     "@trpc/server": "11.0.0-next.327",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "cors": "^2.8.5",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
