--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier": "prettier . --write",
     "generate-migrations": "drizzle-kit generate:sqlite",
     "migrate": "tsx scripts/migrate.ts",
-    "start:server": "tsx server/dev.ts",
+    "server": "tsx server/dev.ts",
     "playground": "tsx playground/index.ts"
   },
   "devDependencies": {
