--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@clerk/types": "^3.62.0",
+    "@cloudflare/workers-types": "^4.20240404.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
@@ -39,6 +40,7 @@
     "@trpc/server": "11.0.0-next.327",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "cloudflare-pages-plugin-trpc": "^0.3.2",
     "cors": "^2.8.5",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
