--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@trpc/client": "11.0.0-rc.329",
     "@trpc/server": "11.0.0-next.327",
+    "@tsndr/cloudflare-worker-jwt": "^2.5.3",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "cloudflare-pages-plugin-trpc": "^0.3.2",
