--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "vite:dev": "vite",
-    "vite:build": "vite build",
-    "vite:preview": "vite preview",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier . --write",
     "generate-migrations": "drizzle-kit generate:sqlite",
