--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate-migrations": "drizzle-kit generate:sqlite",
     "migrate": "tsx scripts/migrate.ts",
     "server": "tsx server/dev.ts",
+    "encryption-test": "tsx scripts/encryption.ts",
     "dev": "concurrently \"pnpm run server\" \"pnpm run vite:dev\""
   },
   "devDependencies": {
@@ -32,7 +33,8 @@
     "tslib": "^2.6.2",
     "tsx": "^4.7.1",
     "typescript": "^5.2.2",
-    "vite": ">=5.0.13"
+    "vite": ">=5.0.13",
+    "@types/bcrypt": "^5.0.2"
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.70.0",
@@ -41,6 +43,7 @@
     "@trpc/client": "11.0.0-rc.329",
     "@trpc/server": "11.0.0-next.327",
     "@tsndr/cloudflare-worker-jwt": "^2.5.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "daisyui": "^4.6.0",
     "dayjs": "^1.11.10",
