encryption_key table and clerk backend integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,6 @@
     "isolatedModules": true,
     "types": ["@cloudflare/workers-types"],
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte",
-    "server/**/*.ts",
-  ],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
