--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cloudflare/workers-types": "^4.20240404.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
@@ -33,10 +34,10 @@
     "tslib": "^2.6.2",
     "tsx": "^4.7.1",
     "typescript": "^5.2.2",
-    "vite": ">=5.0.13",
-    "@types/bcrypt": "^5.0.2"
+    "vite": ">=5.0.13"
   },
   "dependencies": {
+    "@clerk/backend": "^1.2.4",
     "@clerk/clerk-js": "^4.70.0",
     "@libsql/client": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
